[gd_scene load_steps=10 format=3 uid="uid://cttfxjcmk1v5i"]

[ext_resource type="Texture2D" uid="uid://cgs7kfa434w55" path="res://assets/Purple.png" id="1_j6inc"]
[ext_resource type="Script" path="res://Scenes/game_over_ui.gd" id="1_t3vcp"]
[ext_resource type="Texture2D" uid="uid://cdg28s7q6n03s" path="res://assets/panel_beigeLight.png" id="2_57vfa"]
[ext_resource type="LabelSettings" uid="uid://biiturkdf67qj" path="res://Scenes/title.tres" id="3_pbkux"]
[ext_resource type="LabelSettings" uid="uid://do7jfuepndldx" path="res://Scenes/subtitle.tres" id="4_0lby0"]
[ext_resource type="FontFile" uid="uid://c3tvii25oa87v" path="res://assets/LuckiestGuy-Regular.ttf" id="4_ik0bj"]
[ext_resource type="FontFile" uid="uid://b5f7tm1iff3nc" path="res://assets/gemunu-libre-v8-latin-700.ttf" id="7_f8atg"]

[sub_resource type="LabelSettings" id="LabelSettings_u3pva"]
font = ExtResource("4_ik0bj")
font_size = 48
font_color = Color(1, 0.360784, 0, 1)
outline_size = 12
outline_color = Color(0.368627, 0.380392, 0.615686, 1)
shadow_size = 12
shadow_color = Color(0, 0, 0, 0.176471)
shadow_offset = Vector2(6, 4)

[sub_resource type="LabelSettings" id="LabelSettings_d77h8"]
font = ExtResource("7_f8atg")
font_size = 48
font_color = Color(0.560784, 1, 1, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.278431)

[node name="GameOverUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t3vcp")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_j6inc")
stretch_mode = 1

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 90
theme_override_constants/margin_top = 90
theme_override_constants/margin_right = 90
theme_override_constants/margin_bottom = 90

[node name="NP" type="NinePatchRect" parent="MC"]
layout_mode = 2
texture = ExtResource("2_57vfa")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="MC/NP"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MC/NP/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 32

[node name="GameOverLabel" type="Label" parent="MC/NP/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 120)
layout_mode = 2
size_flags_vertical = 2
text = "Level Complete!"
label_settings = ExtResource("3_pbkux")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MovesLabel" type="Label" parent="MC/NP/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "999 Moves Taken"
label_settings = ExtResource("4_0lby0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BestLabel" type="Label" parent="MC/NP/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "99 Best Score"
label_settings = ExtResource("4_0lby0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RecordLabel" type="Label" parent="MC/NP/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "A New Record!
"
label_settings = SubResource("LabelSettings_u3pva")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Instructions" type="Label" parent="MC/NP/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
text = "(Q)uit to main menu"
label_settings = SubResource("LabelSettings_d77h8")
horizontal_alignment = 1
vertical_alignment = 1
